[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/titleScreen/HomeScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/titleScreen/SettingsScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/titleScreen/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://src/titleScreen/StartGameScreen.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/titleScreen/PowerUpScreen.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "difficultyToHome"
tracks/0/type = "value"
tracks/0/path = NodePath("StartGameScreen:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.116629, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1207.64, -668.245 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HomeScreen:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.8 ),
"transitions": PoolRealArray( 0.143587, 1 ),
"update": 0,
"values": [ Vector2( -904.488, 827.514 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "gameToPowerup"
tracks/0/type = "value"
tracks/0/path = NodePath("StartGameScreen:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.233258, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 18.4997, 869.517 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PowerUpScreen:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.7 ),
"transitions": PoolRealArray( 2.63902, 1 ),
"update": 0,
"values": [ Vector2( 1330.61, -794.682 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "powerupToGame"
tracks/0/type = "value"
tracks/0/path = NodePath("PowerUpScreen:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.217638, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -2665.57, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StartGameScreen:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.7 ),
"transitions": PoolRealArray( 3.36358, 1 ),
"update": 0,
"values": [ Vector2( 18.4997, 869.517 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("HomeScreen:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 3.13834, 0.732043, 1 ),
"update": 0,
"values": [ Vector2( 0, -642.053 ), Vector2( 0, 93.3381 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("HomeScreen:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.466517, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1000.38, 773.592 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StartGameScreen:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1.68179, 1 ),
"update": 0,
"values": [ Vector2( 1294.79, 766.198 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("SettingsScreen:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.112656, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1350.64, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HomeScreen:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.8 ),
"transitions": PoolRealArray( 4.92458, 1 ),
"update": 0,
"values": [ Vector2( -7.55957, -686.072 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("HomeScreen:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.23, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 720 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SettingsScreen:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.7 ),
"transitions": PoolRealArray( 2.83, 1 ),
"update": 0,
"values": [ Vector2( 1280, 0 ), Vector2( 0, 0 ) ]
}

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.05945
margin_right = 1280.0
margin_bottom = 721.059
rect_min_size = Vector2( 1280, 720 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeScreen" parent="." instance=ExtResource( 1 )]
position = Vector2( -904.488, 827.514 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start"
anims/difficultyToHome = SubResource( 1 )
anims/gameToPowerup = SubResource( 2 )
anims/powerupToGame = SubResource( 3 )
anims/start = SubResource( 4 )
anims/toDifficulty = SubResource( 5 )
anims/toHome = SubResource( 6 )
anims/toSettings = SubResource( 7 )

[node name="SettingsScreen" parent="." instance=ExtResource( 2 )]
position = Vector2( 1280, 0 )

[node name="StartGameScreen" parent="." instance=ExtResource( 4 )]
position = Vector2( -1187.28, -656.978 )

[node name="PowerUpScreen" parent="." instance=ExtResource( 5 )]
position = Vector2( -2665.57, 0 )

[connection signal="playPressed" from="HomeScreen" to="." method="_on_HomeScreen_playPressed"]
[connection signal="settingsPressed" from="HomeScreen" to="." method="_on_HomeScreen_settingsPressed"]
[connection signal="settingsBackPressed" from="SettingsScreen" to="." method="_on_SettingsScreen_settingsBackPressed"]
